backend/sample-iptables
#
#
#
#  ******************************************************
#  *** This file is no longer rdisted from the server ***
#  *** so it should be edited directly                ***
#  ******************************************************
#
#
#
#

# Rules for nat
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o br1 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A POSTROUTING -s 192.168.53.0/24 ! -d 192.168.53.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.53.0/24 ! -d 192.168.53.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.53.0/24 ! -d 192.168.53.0/24 -j MASQUERADE
COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

#==================================================================
#===================== silverpalm/thatchpalm   ====================
#***** silver/thatchpalm now excluded from iptables updates so this
#***** is no longer pushed but should be accurate as of 8/10/2016
#***** but is sure to deviate moving forward.
#==================================================================

# Limited ssh access
#thatchpalm
-A INPUT -s 156.56.83.9 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
# gateway
-A INPUT -s 10.56.27.70 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
# htc2.carbonate.uits.iu.edu
-A INPUT -s 149.165.234.232 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
# pyro
-A INPUT -s 10.79.247.74 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.56.83.27 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
# Nagios servers
-A INPUT -s 156.56.83.10 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 129.79.247.154 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.79.247.1 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
#
# Limited port 4822 access only from htc cluster
-A INPUT -s 149.165.234.231 -p tcp -m state --state NEW -m tcp --dport 4822 -j ACCEPT
-A INPUT -s 149.165.234.232 -p tcp -m state --state NEW -m tcp --dport 4822 -j ACCEPT
-A INPUT -s 149.165.234.233 -p tcp -m state --state NEW -m tcp --dport 4822 -j ACCEPT
-A INPUT -s 149.165.234.234 -p tcp -m state --state NEW -m tcp --dport 4822 -j ACCEPT
-A INPUT -s 149.165.234.235 -p tcp -m state --state NEW -m tcp --dport 4822 -j ACCEPT
-A INPUT -s 149.165.234.236 -p tcp -m state --state NEW -m tcp --dport 4822 -j ACCEPT
#
# OMSA
-A INPUT -s 129.79.242.0/24 -p tcp --dport 1311 -j ACCEPT
#
# Allow snmp connections from the nagios servers
-A INPUT -s 156.56.83.10 -p udp --dport 161 -j ACCEPT
-A INPUT -s 129.79.247.154 -p udp --dport 161 -j ACCEPT
-A INPUT -s 10.79.247.1 -p udp --dport 161 -j ACCEPT
#
# VM ports open to the world
#
#-A INPUT -p tcp --dport 16000:16079 -j ACCEPT
# We now open up just the even ports from 16000-16100
-A INPUT -p tcp -m multiport --dports 16000,16002,16004,16006,16008 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 16010,16012,16014,16016,16018 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 16020,16022,16024,16026,16028 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 16030,16032,16034,16036,16038 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 16040,16042,16044,16046,16048 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 16050,16052,16054,16056,16058 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 16060,16062,16064,16066,16068 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 16070,16072,16074,16076,16078 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 16080,16082,16084,16086,16088 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 16090,16092,16094,16096,16098 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 16100 -j ACCEPT
#
# Added per fp #46986
-A INPUT -s 172.17.0.0/16 -p tcp --dport 16000:16100 -j ACCEPT
#
# Need to allow connection for the SDA/MDSS backups and archives
-A INPUT -s 149.165.226.0/26 -j ACCEPT
#
#==================================================================
#=======================  EVERYONE  ===============================
#==================================================================
#
# Reject everything else
#
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -d 192.168.53.0/24 -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
